export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_21",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 20,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 15,
          "an_email": 19
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "list",
        "title": "list_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          13,
          14
        ]
      },
      {
        "type": "string",
        "title": "string_12",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "SomeType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 16,
          "two": 18
        },
        "required": []
      },
      {
        "type": "list",
        "title": "Two",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 17,
        "minItems": 3
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "_3_SomeType?",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>true;"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.3"
    }
  }
]'
`;

snapshot[`typegraphs creation 2`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 6
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_5",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 4
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 10,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 8,
          "second": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "sha256_ca4c84007bbe1e2253363df3d2da8605fc21e36c4c280cbb335b7daf5ce0dc73",
          "fn": "(lambda x: (x['first'] + x['second']))"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=({first,second})=>first*second;"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3"
    }
  }
]\`
`;

snapshot[`typegraphs creation 3`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 11
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_13",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "Post",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 10,
          "author": 7
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_15",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>12;"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=user=>({id:12,user});"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>false;"
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1Z727bNhD3Zz0FoX6ROlW1bCcdvKnY1nZdhxYL2mwYYBgCLdG2Vv2bSC32DL/J3mYvtiOp/5JjF0uCrfABiUXyeLw7Ho+nn9w4TAKyMZPt4N5oCHQ5mYhfoPbveHwxGVjDyaU1HA1HY95vWSPrcjAcPABllOEUocG/pbZx/xN6hF7EyTb1V2uG3hGG2TYh6Ke//zJQ4LskosRDWeSRFLE1Qe/iP/0gwOgqW8Aoeis50C8kpX4coZE5NJVH6MPVy1+f5GNP3ngkYv7SJ+kUvbt6+wR4FGWZxiHiK61SnKyRHyZxyhAzqr4Wiyn/JzjFIS34v83Y2gD1U2qg95iR/jmdZV73yU9iMGhbsFyJVpsnzcCSkFATTIoL1pfw/F4OKIryTcmtKQjIBeVsrqFscsJBEN84bkqEY3BA7e/hHzFaDGuCwevUns3bIyFh69iDEfX1q2u1MxzDXvoRjD6uj5FNElPSKzXEGweviEOJa1ujoRzQ5U8KbrW5byv9b/zIg2U49+XQaHcHfugzEPNlNfJ7RtJtPlDrDmIXBw7ZuIRS+6Lqd+OIkQ1z/DJwbDWjJFVLxXTFI0vECGWOK7OXw91OtdVUbq4+Faxim+z6Dmm6GEiyBfTLTTYTEcswIoZoHJJrfgRsxEzK0sxllem78omTGkdEnQJb4FOmMdMHvVck1XQDhbABYwNFOCS2en0Tq7rRnMqgj0+NEwYHBwfaykzJUlM/5Murem3GvnqUEkuu3CVKHmvCF6dqjx1g8KOV0EM+am01sbMMYswEi3jSuGWWOQQTs4D5sJ4TL204052ZkUOiLBQz+YM2E+4ypOnzHvbcfdW0wp+8w55ZBhrNDR4dS39l79SPZAtc6h84yIi6P6B4JUxqn4syL0CYedHVwpE+K1zC3bfLl6iE6J3VIghF4tVjgfiQLlNtVvNszSJ9ruvV1vdLc25AhANBAWKLoOzxcYj9QDqZP2m3Rc2LKj6agbMyMWRSjadTc4EpHIaZyk/Xd/yZ98J+6R3OdYjd0cWlJlh/gIbg1EuZMuNU4cfZbH4kzWUWuVrDlFroNm1k5iKOA4Kjtpfc2AOTNB3ZzxFsVGGRsMoUrpMZXYPjrRfWDs7UofIcl7fb3VeCR+o/a/KsU/+Nx2PrXP89APWXYuIaNW6tyO6kYjrEn2yhxolK4aLVW2XVaoFOJLfrAXnT99z8fPBwsSBVsZtaaAfzHPY8W84xuXVOgMOFh7VWWmtfzgXtOj0i1S/9lNav4VY2LPmgKosj73bGfaNHbyfc3nnSCLSZos0sV2aOvuCNfMX5LfkXfmvi8m3aHroLajdv1+o+C/enmZDfGDskpBpICkJ7cYWIPvQ471RPMubzuE+om/oJo0/ZOiXEZHRwD3Qk/0PmH7fz/2g8Oef/h6CnTz8FAHgVYMpqb/7ijR9EHHzlzyfI135e/6ZL7BJ0zaPtTZRkTGS8xRRBZb4g6VfQwFVjryg8vcIVwPMEr5eRiFOeMXYIG2iB9tOaMH4wd9CzK94ip+g9nOjU+1qW4QaY8jGKb6LnvDzWp2JxXF+8pslejKaEZWlUrsZ1GnxORH1eet8r/He0/ru87OJ/w8nofP4fgP6j+J+RF2lGP1x3HIrDAgMp37gVhVp1VGSnYqgh4EyriwbYIPCNEdQUirJoSJADBkfL7MlYP1iFfjISdbgkFekSEIJquOgpqk+OizWt8r2GObxigvKUF1E5wnTFW/q+AKd+5sharguMHBXG3//jtBIn55fipPRDpTEgQLWqjwKkszAab/LWSG0WXIXBtVoO8KOaEO4BQ6heSuJdQhrUer43RXzXhKP2ekt6oz4UMvMBFRpbDlZJtZYcoM291KqZxXUk9ZFR6Ai7+J/0iGAAUWHsZQG02/XWbSrJaGgve7d1J6BbvodZnN7jFXAs/z+bDDv5/+L8/v8gdCAVV3mYHUnBRz+EyORYxtlJuTHPf78RWfSdAmc3U5VJCdNUqwO8Lxpwt+CaqWt+1AU4HZT/ekBqt3NTjKSEDvrt1VcRN0au0JrAN5qOUqQJOLdM2cu5uw7svDxpmjDZ6kxenTaZ94/yW7IhZF9HkDmuTk/fpcIx4MGJgSQor6597nbpIAOS9vzg1vUDJyrPt82PGbDeqoncd9EQuXo5W/0xXkdqOVO1xup+btyGmLTCovxaAd9/4AtDL8y/b6Lvh5Fy+Q2M8XswPwr1qwfYXnHHt3jFZpwx7zOd6UxH6R+c8TGvACQAAA=="
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3"
    }
  }
]'
`;

snapshot[`typegraphs creation 4`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_21",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 20,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 15,
          "an_email": 19
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "list",
        "title": "list_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          13,
          14
        ]
      },
      {
        "type": "string",
        "title": "string_12",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "SomeType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 16,
          "two": 18
        },
        "required": []
      },
      {
        "type": "list",
        "title": "Two",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 17,
        "minItems": 3
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "_3_SomeType?",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 15,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>true;"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.3"
    }
  }
]'
`;

snapshot[`typegraphs creation 5`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 6
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_5",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 4
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 10,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 8,
          "second": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "sha256_1ba371f8249eab0c77239207fa3c16506224b5c287f58aa5ff322450a6aee50d",
          "fn": "lambda x: x['first'] + x['second']"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=({first,second})=>first*second;"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3"
    }
  }
]\`
`;

snapshot[`typegraphs creation 6`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 11
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_12",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "Post",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 10,
          "author": 7
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_7",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_14",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>12;"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=user=>({id:12,user});"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>false;"
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+0Y7W7bRsy//RSE/lTqFMWSk2BQ12JdW6wFOjRoM2BAYBhn6eQIlXSadJptGH6Tvc1ebLwPSWc7X8OQFG1NJNaJx+ORPJJHMWJ5mdGlx+vBg8EI4ezkRD4Rdp/j8cnpwB+dnPmjYBSMBd73Ax/pB48ATc1JBTD4v7Cr3FcCx8fwipWrKp1fcfiNcsJXJYUP//ztQpZGtKhpDE0R0wr4FYU3Gal5GsF7NQWBN/KGyOLT+es/jjTy6F1MC54mKa3CdsEREg6HaV6yisMakqUL5wz5r1zg+IdbzitSXsEGkorlYP3coY7r+PNxzmJ0UOtZz+E1LdjHBrfJ6U2LKjVdH6M4bGf5y4bfuFlJKpLXasGwm7KHAGv8ByhITkOwOK35UaSi50iQ1ZYr52saVZTXIVxaauhbLuhh0A/H1kTRV4QjP8UbYJEWMVt8olEIZyN3C/k+zVMegh/82OL/bGi10ugOmbGIZG+WEa1RhtMWG7GC0yU3z8ZqalppoTfqEbGq7mUhWcYWryoq15AMZxL8pa45/ZYSdA6h7WQLj650xWJphV/fXFjbkx/Q3dJCzD3tZ+iyZDW9hl9Oli/nVJrED0aGvPLHnjvw/IWWGbWsOYgDh+dQ0IXpJ7bzzKApmxmSKCf08AWfgsCgqFlOL0QwPAfu1bxqIm63lmEFHhn3srTmNvdSNO2cVrbjomvlQrExyoZj7SoXC2bBxmn14QsmFrOSp6wgmT33KprY1ie9n+U4rY49i24S+WxJqT3wJkHJFBFpMQ/VFI7sTg4yTTJGuJiSA1sL77uQNxlPke+HJITAEJ0UU1o0uVginlP70kJTCKdGpayJSaeN0tG3RlqDwFD0etQejxl3CyZSV71WapakKPIaPtMVKv8XyRqhect9s6tCt0mrx84W3ilu4p1OtlYqS4WGzUBu1PNxDPoCw53GxqHTFBNiZV8adjW0dCaO05/wDpfpAtdO8dDDzslMA+ckzaSFxcC+xhle9Wdu+MPcI5jVbJHavBmp0Z8vZZL6RYwFFs9Hh4BJepWTKDg9syXtW3yRpE7PVcVl51GCLJQh5iVNEdnGqXVSuR2SezPGMkqK3gZgnLRYFQuVbBnEeA7Uco1ZmiRUnFGyxBghscmk8wbHE+ZUkWxjJLcGk7oiFT4HB7gJ2kifttflA1SCd9R//ulor/4bj4PgUP89AnyR+u+L1n7nK6xMivsyKCX1XjWoyr82eI5acrwJjXrk1krjPsWKZiBF0DRb0uuKZSdHkxjvKS23UO49yWcxaRO1cd1ZSVrV3DIuPFWdsiK2rr8Fe0KNWLcJPJObwDKE5eUTyffJBH4QL4rhk0l3gd+QsLUxV9dcLg8ks72WzFxQ6zfy4CQKnmrc7UKLO2bzdd8vdVSlJa+P+VVF6QN1Ae7I/5j5x7v5Pxif+If8/wjwqPkfi+MqIRGFC+Ft74qy4TJRzkLAgn1GK5H0SP+yGQ5FZsO0LbKBKKZB+qn8GAfiwgw2ocFMxOR6E8oIl5+7IXzEMK7in1SN7qIqnwu2KF7IwlB96RJzc0OSjZzFL/WmKrrdhEyDbwnqVFTtD9r+uyv+g5F/ttf/G4nn4BHgEP/fR/03VMUUkV2S7jO9w9f+VvtEhvt220L1RkQ3RH1zq3WzLX4dlSu6ViGcjBXtbuGo+4X7xeI9qsHby0mZY7Hn0NO0GF0sKjLR+tvvF6WxqbIumLCyxDyqm1Tn+GKp2sdoSPwuGoltJ0KLiYT33ED0Ihj6ipBpl7Pcr+W8U+fKJlxfK9bYSZr1baStxoIftH3OrTquNY0WRDbmeoZSHqnIPlcxJznjkQulxIlLm26ca3eSXEs1tvBlJXpmSjbZU+2afvJ+01Ioj2+LYNRvb9TZSS5DnhgtTSYQu3XdN1/IHuAABzjAAf4T/AtWr19zACAAAA=="
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3"
    }
  }
]'
`;
